--- a/client/package.json
+++ b/client/package.json
@@ -107,6 +107,7 @@
     "react-toastify": "^4.4.3",
     "react-ultimate-pagination": "^1.2.0",
     "redux": "^4.0.1",
+    "ts-loader": "^5.3.0",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
