--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "autobind-decorator": "^2.1.0",
     "autoprefixer": "^9.3.1",
     "ava": "^0.25.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^23.4.2",
@@ -48,7 +49,9 @@
     "postcss-loader": "^3.0.0",
     "react-test-renderer": "^16.5.2",
     "selenium-webdriver": "^4.0.0-alpha.1",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "typescript": "^3.1.6",
     "uuid": "^3.3.2",
     "wdio": "^3.0.0",
     "wdio-chromedriver-service": "^0.1.1",
@@ -107,7 +110,6 @@
     "react-toastify": "^4.4.3",
     "react-ultimate-pagination": "^1.2.0",
     "redux": "^4.0.1",
-    "ts-loader": "^5.3.0",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
