--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,19 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'application'
-apply plugin: 'jacoco'
-apply plugin: 'checkstyle'
-apply plugin: 'org.kordamp.markdown.convert'
-apply plugin: 'com.bmuschko.docker-remote-api'
-apply plugin: 'com.moowork.node'
-apply plugin: 'project-report' // adds dependencyReport and htmlDependencyReport tasks
-apply plugin: 'com.diffplug.gradle.spotless'
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'idea'
+    id 'application'
+    id 'jacoco'
+    id 'checkstyle'
+//  id 'org.kordamp.markdown.convert' version '1.2.0'
+    id 'com.bmuschko.docker-remote-api' version '5.2.0'
+    id 'com.moowork.node' version '1.3.1'
+    id 'project-report' // adds dependencyReport and htmlDependencyReport tasks
+    id 'com.diffplug.gradle.spotless' version '3.24.3'
+    id 'org.beryx.runtime' version '1.7.0'
+}
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
 
 boolean isTestEnv = project.hasProperty("testEnv")
 
@@ -87,7 +90,7 @@ dependencies {
 	compile 'com.google.guava:guava:28.1-jre' // Pick the non-Android version of Guice
 
 	// Supported databases:
-	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.4.1.jre8'
+	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.4.1.jre11'
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.8' // If using postgresql
 	compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.0' // or newer, for postgresql dropPrimaryKey fix [CORE-3129]
 
@@ -109,6 +112,9 @@ dependencies {
 	compile group: 'org.apache.poi', name: 'poi', version: '4.1.0'
 	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
 
+	// For Java 11
+	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+
 	// For parsing HTML to check for 'empty' input
 	compile 'org.jsoup:jsoup:1.12.1'
 
@@ -126,7 +132,7 @@ dependencies {
 }
 
 jacoco {
-    toolVersion = "0.8.1"
+    toolVersion = "0.8.2"
 }
 
 jacocoTestReport {
@@ -135,6 +141,16 @@ jacocoTestReport {
 		html.enabled false
 	}
 }
+
+runtime {
+    options = ['--vm=server', '--strip-debug', '--strip-native-commands', '--compress', '2', '--no-header-files', '--no-man-pages']
+    modules = ['java.naming', 'java.xml', 'java.management']
+		jpackage {
+				jpackageHome = '/home/vassil/jdk-14'
+				installerType = 'deb'
+		}
+}
+
 
 //Set project version to git tag
 def proc = "git describe".execute(null, projectDir);
@@ -444,7 +460,7 @@ distributions {
 		contents {
 			into('docs/') {
 				from('anet.yml') { rename('anet.yml', 'anet.yml.template') }
-				from(markdownToHtml)
+				// from(markdownToHtml)
 			}
 			into('lib/') {
 				from('lib/sqljdbc_auth.dll')
@@ -453,18 +469,6 @@ distributions {
 	}
 }
 
-//Add gradle plugin repos
-buildscript {
-	repositories {
-		gradlePluginPortal()
-	}
-	dependencies {
-		classpath "org.kordamp:markdown-gradle-plugin:1.2.0"
-		classpath 'com.bmuschko:gradle-docker-plugin:5.1.0'
-		classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
-		classpath "com.diffplug.spotless:spotless-plugin-gradle:3.24.3"
-	}
-}
 
 startScripts {
 	doLast {
@@ -474,11 +478,11 @@ startScripts {
 }
 
 //Configure Markdown plugin
-allprojects {
-	markdownToHtml.sourceDir = file("docs")
-	markdownToHtml.outputDir = file("$buildDir/documentation")
-	markdownToHtml.hardwraps = true
-}
+// allprojects {
+// 	markdownToHtml.sourceDir = file("docs")
+// 	markdownToHtml.outputDir = file("$buildDir/documentation")
+// 	markdownToHtml.hardwraps = true
+// }
 
 node {
 	nodeModulesDir = file("${project.projectDir}/client")
