--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,7 @@ dependencies {
 	compile group: 'org.pac4j', name: 'pac4j-config', version: '3.6.1'
 	compile group: 'org.pac4j', name: 'pac4j-sql', version: '3.6.1'
 	compile group: 'org.pac4j', name: 'pac4j-kerberos', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-jwt', version: '3.6.1'
 
 	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.6.RELEASE'
 
