--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ repositories {
 	mavenCentral()
 	maven { url 'https://jitpack.io' }
 	maven { url "https://repo.spring.io/plugins-release" }
+	maven { url "https://build.shibboleth.net/nexus/content/repositories/releases/"}
 	jcenter()
 }
 
@@ -90,6 +91,18 @@ dependencies {
 	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.4.1.jre8'
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.8' // If using postgresql
 	compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.2' // or newer, for postgresql dropPrimaryKey fix [CORE-3129]
+
+	// Authorizatiion
+	compile group: 'org.pac4j', name: 'dropwizard-pac4j', version: '3.0.0'
+	compile group: 'org.pac4j', name: 'pac4j-core', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-oauth', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-http', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-config', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-sql', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-kerberos', version: '3.6.1'
+	compile group: 'org.pac4j', name: 'pac4j-ldap', version: '3.6.1'
+
+	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.6.RELEASE'
 
 	compile 'javax.mail:mail:1.4.7'
 	compile 'ch.qos.logback:logback-classic:1.2.3'
