--- a/client/package.json
+++ b/client/package.json
@@ -98,6 +98,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@blueprintjs/core": "^3.22.3",
     "@blueprintjs/datetime": "^3.15.1",
+    "@bootstrap-styled/v4": "^3.2.2",
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "^4.3.0",
@@ -138,6 +139,8 @@
     "react-confirm-bootstrap": "^5.3.0",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^3.28.11",
+    "react-hook-form-input": "^1.1.3",
     "react-mosaic-component": "^3.2.0",
     "react-notification-badge": "^1.5.1",
     "react-redux": "^7.1.3",
@@ -145,6 +148,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.14",
+    "react-select": "^3.0.8",
     "react-tag-input": "^5.2.3",
     "react-toastify": "^5.4.1",
     "react-tooltip": "^3.11.1",
