Initial webpack 5 support

--- a/client/package.json
+++ b/client/package.json
@@ -44,10 +44,10 @@
     "chai": "^4.2.0",
     "chalk": "^3.0.0",
     "chromedriver": "^80.0.1",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "3.0.0",
     "colors": "^1.4.0",
     "config": "^3.2.5",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "5.1.1",
     "countries-list": "^2.5.1",
     "cross-fetch": "^3.0.4",
     "cross-spawn": "^7.0.1",
@@ -73,7 +73,7 @@
     "handlebars": "^4.7.3",
     "handlebars-loader": "^1.7.1",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "4.0.0-beta.11",
     "i18n-iso-countries": "^4.3.1",
     "ignore-loader": "^0.1.2",
     "jest": "^25.1.0",
@@ -90,9 +90,9 @@
     "uuid": "^3.4.0",
     "wdio-chromedriver-service": "^5.0.2",
     "webdriverio": "^5.18.6",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack": "5.0.0-beta.14",
+    "webpack-cli": "4.0.0-beta.8",
+    "webpack-dev-server": "3.10.3",
     "webpack-merge": "^4.2.2",
     "xhr2": "^0.2.0"
   },
@@ -155,14 +155,15 @@
     "react-use-dimensions": "^1.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "vm-browserify": "^1.1.2",
     "yup": "^0.28.1"
   },
   "resolutions": {
     "autobind-decorator": "2.4.0"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack --mode production --config config/webpack.client.prod.js",
-    "start": "export SERVER_URL=${SERVER_URL:-'http://localhost:8080'} DEV_PORT=${DEV_PORT:-3000} ; NODE_ENV=development webpack-dev-server --mode development --open --config config/webpack.client.dev.js",
+    "build": "NODE_ENV=production webpack --config config/webpack.client.prod.js",
+    "start": "export SERVER_URL=${SERVER_URL:-'http://localhost:8080'} DEV_PORT=${DEV_PORT:-3000} ; NODE_ENV=development webpack-dev-server --open --config config/webpack.client.dev.js",
     "lint": "eslint 'config/**/*.js' 'platform/**/*.js' 'scripts/**/*.js' 'src/**/*.js' 'stories/**/*.js' 'tests/**/*.js'",
     "lint-fix": "prettier --write --no-semi 'config/**/*.js' 'platform/**/*.js' 'scripts/**/*.js' 'src/**/*.js' 'stories/**/*.js' 'tests/**/*.js' && eslint --fix 'config/**/*.js' 'platform/**/*.js' 'scripts/**/*.js' 'src/**/*.js' 'stories/**/*.js' 'tests/**/*.js'",
     "test": "echo 'Run \"test-all\" to execute all client-side tests, or pick a specific test target: \"test-jest\", \"test-wdio\", \"test-e2e\".' ; exit 1",
