--- a/.github/workflows/build-gradle.yml
+++ b/.github/workflows/build-gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Build ANET
 
 on:
   push:
@@ -10,36 +10,46 @@ on:
 
 jobs:
   build:
-
+    name: Build with Gradle
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: '--max-old-space-size=8192'
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - run: ./gradlew yarn_install yarn_lint jar
+
+  test:
+    needs: build
+    name: Test with ${{ matrix.database.DB_DRIVER }}
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        database:
+        - DB_DRIVER: sqlserver
+          CONTAINER: anet-mssql-test-server
+        - DB_DRIVER: postgresql
+          CONTAINER: anet-psql-test-server
+    env:
+      NODE_OPTIONS: '--max-old-space-size=8192'
+      DB_DRIVER: ${{ matrix.database.DB_DRIVER }}
+      CONTAINER: ${{ matrix.database.CONTAINER }}
 
     steps:
     - uses: actions/checkout@v1
-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: 1.8
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
-
-    - name: Get yarn cache
-      id: yarn-cache
-      run: echo "::set-output name=dir::$(./gradlew yarn_cache_dir)"
-
-    - uses: actions/cache@v1
-      with:
-        path: ${{ steps.yarn-cache.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
-
-    - name: Build with Gradle
-      env:
-        NODE_OPTIONS: '--max-old-space-size=8192'
-      run: ./gradlew distZip
+    - run: ./gradlew -PtestEnv dockerCreateFakeSmtpServer dockerStartFakeSmtpServer
+    - run: ./gradlew -PtestEnv dockerCreateDB dockerStartDB dbWait dbMigrate dbLoad
+    - run: ./gradlew -PtestEnv check test jacocoTestReport
+    - run: ./gradlew -PtestEnv run & SERVER_PID=$!
+    - run: |
+        ./gradlew -PtestEnv run &
+        SERVER_PID=$!
+        sleep 60
+    - run: ./gradlew -PtestEnv yarn_testAll
+    - run: kill $SERVER_PID
